<resources>
    <string name="app_name">Example Practice App</string>
    <string name="enter_info">Enter Something</string>
    <string name="save">Save</string>
    <string name="txtBotonSharedPrefsExample">Shared Preferences Example</string>
    <string name="enter_chore">Enter a chore</string>
    <string name="assign_to">Assigned to…</string>
    <string name="assignedBy">Assigned by…</string>
    <string name="txtBotonChoresDatabaseExample">Chores Database Example</string>
    <string name="menu_title_add_chore">Add Chore</string>
    <string name="txtBotonVolleyJsonExample">Volley Json Example</string>
    <string name="title_activity_volley_tab_example">VolleyTabExample</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="txtMotivationalExample">Fragments Example</string>
    <string name="image_view_description">Lilly image</string>
</resources>
